# boredom

./: .gitignore  MEMORY_STRATEGIES.md  README.md  analyze_log_mlflow.py  baguettotron_experiment.py  bsky_download.py  collapse_detection.py  grid.yaml  grid_3b_capacity.yaml  grid_3b_control_only.yaml  grid_3b_only.yaml  grid_3b_phase1.yaml  grid_3b_phase1_revised.yaml  grid_3b_phase2.yaml  grid_3b_phase2_llama.yaml  grid_3b_test.yaml  grid_cross_family.yaml  grid_dense_30b.yaml  grid_depth_hypothesis.yaml  grid_family_comparison.yaml  grid_focused.yaml  grid_gpt_oss_20b.yaml  grid_gpt_oss_test.yaml  grid_memory_injection.yaml  grid_model_family.yaml  grid_nemotron_depth.yaml  grid_qwen3_8b.yaml  grid_qwen3_8b_nothink_only.yaml  grid_qwen3_moe_only.yaml  grid_qwen3_moe_vs_dense.yaml  grid_qwen3_nothink_control.yaml  grid_qwen3_thinking.yaml  grid_void_identity.yaml  idle_llm_loop.py  metrics.md  pyproject.toml  render_conversation_html.py  run_grid.py  run_scaffold_grid.py  run_scaffold_grid_hybrid.py  (+2 more)
plugins/: __init__.py  default.py  memory_injection.py  plugin_base.py  qwen_nothink.py  strix_scaffolding.py  token_limit.py  tool_cooldown.py  void_identity.py
results/scaffold_grid_hybrid/: baseline_1.7b_nothink_run1.json  baseline_1.7b_nothink_run2.json  baseline_1.7b_nothink_run3.json  baseline_1.7b_think_run1.json  baseline_1.7b_think_run2.json  baseline_1.7b_think_run3.json  baseline_4b_think_run1.json  baseline_8b_nothink_run1.json  baseline_8b_nothink_run2.json  baseline_8b_nothink_run3.json  baseline_8b_think_run2.json  baseline_8b_think_run3.json  (+11 more)
