[project]
name = "boredom"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "litellm>=1.77.3",
    "markdown-it-py>=4.0.0",
    "sentence-transformers>=3.0.0",
    "mlflow>=2.16.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "typer>=0.12.3",
]
